force-app/main/default/objects/Izin_Belgesi__c/fields/Izin_Suresi__c.field-meta.xml
<CustomField>
    <fullName>Izin_Suresi__c</fullName>
    <label>Izin Süresi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>