force-app/main/default/objects/Izin_Belgesi__c/fields/Izinden_donus_tarihi__c.field-meta.xml
<CustomField>
    <fullName>Izinden_donus_tarihi__c</fullName>
    <label>İzinden dönüş tarihi</label>
    <type>Date</type>
</CustomField>