force-app/main/default/objects/Izin_Belgesi__c/fields/Personel__c.field-meta.xml
<CustomField>
    <fullName>Personel__c</fullName>
    <label>Personel</label>
    <referenceTo>Personel__c</referenceTo>
    <relationshipLabel>IzinBelgeleri</relationshipLabel>
    <relationshipName>IzinBelgeleri</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>