force-app/main/default/objects/Izin_Belgesi__c/fields/zine_k_tarihi__c.field-meta.xml
<CustomField>
    <fullName>zine_k_tarihi__c</fullName>
    <label>İzine çıkış tarihi</label>
    <type>Date</type>
</CustomField>